# python-pro-tdd

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/handlers/: cep_handler.py
app/api/routes/: auth.py  cep.py
app/core/: config.py  security.py
app/exceptions/: cep_service_error.py
app/schemas/: cep_data.py
app/services/: api_service.py
tests/: conftest.py  test_api_service.py  test_auth_route.py  test_cep_route.py  test_cep_route_di.py  test_parse_cep_response.py  test_security.py
